<resources>
    <string name="app_name" translatable="false">ATech CTUT</string>
    <string name="title_activity_index">Index</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">------ ------</string>
    <string name="nav_header_subtitle">------------------------------</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_noti">Thông báo</string>
    <string name="menu_sender">Gửi thông báo</string>
    <string name="menu_addstudent">Thêm sinh viên</string>
    <string name="menu_addteacher">Thêm giảng viên</string>
    <string name="menu_attedance">Điểm danh</string>
    <string name="menu_attandancereport">Báo cáo</string>
    <string name="menu_detailstudent">Sinh viên</string>
    <string name="menu_detailteacher">Giảng viên</string>
    <string name="menu_profile">Cá nhân</string>


    <string name="menu_share">Chia sẻ</string>

    <string name="menu_Logout">Đăng xuất</string>

    <string name="key" />
    <string name="place" />
    <string name="title_activity_student_index">studentIndex</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_send">Send</string>
    <string name="send">Send</string>
    <string name="message">Message:</string>
    <string name="subject">Subject</string>
    <string name="fullname">Họ tên:</string>
    <string name="usertypw_teacher">UserTypw:Teacher</string>
    <string name="profile_pic">Profile pic</string>
    <string name="clazz">Lớp:</string>
    <string name="mssv">MSSV:</string>
    <string name="phone_number">SĐT:</string>
    <string name="_91_1234567890">+83 1234567890</string>
    <string name="email">Email:</string>
    <string name="adminerror_210_com">------@gmail.com</string>
    <string name="uid">Uid:</string>
    <string name="_941264536383012">-------------</string>
    <string name="address">Địa chỉ:</string>
    <string name="faculty">Khoa:</string>
    <string name="year">Khóa:</string>
    <string name="majors">Ngành:</string>
    <string name="subject1">Subject:</string>
    <string name="message1">Message</string>
    <string name="birth_date">Ngày sinh:</string>
    <string name="degree">Bằng cấp:</string>
    <string name="next">Tiếp tục</string>
    <string name="password">password</string>
    <string name="comfirm_pasword">Comfirm pasword</string>
    <string name="submit">Submit</string>
    <string name="show">Show</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="take_picture">take_picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
