<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/fullname"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/degree"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/degree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="text"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faculty"
                        android:textColor="@color/black"
                        android:layout_margin="0dp"
                        android:textSize="13dp"
                        android:paddingStart="10dp"/>
                    <Spinner
                        android:layout_margin="0dp"
                        android:id="@+id/faculty"
                        style="@style/spinnerItemStyle"
                        android:layout_width="174dp"
                        android:layout_height="50dp"
                        android:background="@drawable/spinner_bg"
                        android:dropDownWidth="wrap_content"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:paddingRight="14dp"
                        android:popupBackground="@android:color/white"
                        android:popupElevation="3dp"
                        android:stateListAnimator="@drawable/spinner_sla" />
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="190dp"
                    android:layout_height="60dp"
                    android:hint="@string/birth_date"
                    app:hintTextColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="#000"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birtofdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#242424"
                        android:inputType="date"
                        android:maxLength="10"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/phone_number"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/address"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addresss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textPostalAddress"
                    android:maxLines="4"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/next"
                android:backgroundTint="#1134af"
                android:textColor="#fff"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>
        </TableLayout>
    </LinearLayout>
</ScrollView>