<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/studentimage"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_user" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/fullname"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TableRow
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <LinearLayout
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/faculty"
                        android:textColor="@color/black"
                        android:layout_margin="0dp"
                        android:textSize="13dp"
                        android:paddingStart="10dp"/>
                    <Spinner
                        android:layout_margin="0dp"
                        android:id="@+id/studentfaculty"
                        style="@style/spinnerItemStyle"
                        android:layout_width="174dp"
                        android:layout_height="50dp"
                        android:background="@drawable/spinner_bg"
                        android:dropDownWidth="wrap_content"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:paddingRight="14dp"
                        android:popupBackground="@android:color/white"
                        android:popupElevation="3dp"
                        android:stateListAnimator="@drawable/spinner_sla" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginStart="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textColor="@color/black"
                        android:layout_margin="0dp"
                        android:textSize="13dp"
                        android:paddingStart="10dp"/>
                    <Spinner
                        android:layout_margin="0dp"
                        android:id="@+id/studentyear"
                        style="@style/spinnerItemStyle"
                        android:layout_width="191dp"
                        android:layout_height="50dp"
                        android:background="@drawable/spinner_bg"
                        android:dropDownWidth="wrap_content"
                        android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                        android:paddingRight="14dp"
                        android:popupBackground="@android:color/white"
                        android:popupElevation="3dp"
                        android:stateListAnimator="@drawable/spinner_sla" />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/mssv"
                    app:hintTextColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="#000">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/studentmssv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#242424"
                        android:inputType="number"
                        android:maxLength="12"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/phone_number"
                    app:hintTextColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="#000"
                    android:layout_marginStart="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/studentnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#242424"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/clazz"
                    app:hintTextColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="#000">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/studentclass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#242424"
                        android:inputType="text"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/birth_date"
                    app:hintTextColor="#000"
                    android:textColorHint="#000"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:boxStrokeColor="#000"
                    android:layout_marginStart="5dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/studentbirtofdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#242424"
                        android:inputType="date"
                        android:maxLength="10"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/address"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentaddresss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLines="4"
                    android:textColor="@color/black"
                    android:textColorHint="#242424" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/majors"
                app:hintTextColor="#000"
                android:textColorHint="#000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="#000"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/studentmajors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#242424"
                    android:inputType="textPostalAddress"
                    android:maxLines="4"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/studentsubmit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Thêm"
                android:backgroundTint="#1134af"
                android:textColor="#fff"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>
        </TableLayout>
        <ProgressBar
            android:id="@+id/progressaddstudent"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/AppTheme.WhiteAccent"/>
    </LinearLayout>
</ScrollView>